# rs-google-play-py

./: .gitignore  Cargo.toml  README.md
.github/: python-versions.txt
.github/workflows/: build.yml  checks.yml  dependency-watchdog.yml
googleplay-protobuf/: Cargo.toml
googleplay-protobuf/src/: googleplay.rs
gpapi/: Cargo.toml  device.properties
gpapi-python/: Cargo.toml  pyproject.toml
gpapi-python/examples/: example.config.yaml  example.py
gpapi-python/src/: lib.rs
gpapi/src/: lib.rs
